<resources>
    <string name="app_name">Preguntados</string>
    <string name="appTitle">PREGUNTADOS</string>
    <string name="login_userText">Usuario</string>
    <string name="login_userPass">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="login_registerText">¿Aún no tienes cuenta? CREAR CUENTA</string>
    <string name="register_CorreoText">Correo</string>
    <string name="register_loginText">¿Ya tienes cuenta? INICIAR SESIÓN</string>
    <string name="register_NombreText">Nombre Completo</string>
    <string name="register_userText">Usuario</string>
    <string name="register_passwordText">Contraseña</string>
    <string name="register_registerButton">Registrarse</string>
    <string name="alert_btnContinuar">Continuar</string>
    <string name="register_alertTitle">Error al registrar</string>
    <string name="register_error_camposObligatorios">Todos los campos son obligatorios</string>
    <string name="register_error_correoIncorrecto">El correo introducido es incorrecto</string>
    <string name="register_error_longitudCorreo">El correo introducido supera la longitud máxima admitida</string>
    <string name="register_error_longitudNombre">El nombre introducido supera la longitud máxima admitida</string>
    <string name="register_error_longitudUsuario">El usuario introducido supera la longitud máxima admitida</string>
    <string name="register_error_consultaBD">Error al consultar en la base de datos</string>
    <string name="register_error_conexionBD">Error al conectar con la base de datos</string>
    <string name="register_error_correoExiste">El correo introducido ya está registrado</string>
    <string name="register_error_usuarioExiste">El usuario introducido ya está registrado</string>
    <string name="login_sessionExpired">La sesión ha expirado</string>
    <string name="login_error_camposObligatorios">Todos los campos son obligatorios</string>
    <string name="login_error_conexionBD">Error al conectar con la base de datos</string>
    <string name="login_error_consultaBD">Error al consultar en la base de datos</string>
    <string name="login_error_authIncorrecta">Los datos introducidos no son correctos</string>
    <string name="login_alertTitle">Error al iniciar sesión</string>
    <string name="game_finTiempo">Fin del tiempo</string>
    <string name="game_resultadoCorrecto">Correcto</string>
    <string name="game_resultadoIncorrecto">Incorrecto</string>
    <string name="btnRanking">Ranking</string>
    <string name="btnPerfil">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="finjuego_title">FIN DEL JUEGO!!</string>
    <string name="finjuego_continuar">CONTINUAR</string>
    <string name="finjuego_puntuacionText1">Puntuación:</string>
    <string name="finjuego_puntuacionText2">puntos</string>
    <string name="finjuego_respuestasCorrectas">respuestas correctas</string>
    <string name="finjuego_respuestaCorrecta">respuesta correcta</string>
    <string name="finjuego_respuestasIncorrectas">respuestas incorrectas</string>
    <string name="finjuego_respuestaIncorrecta">respuesta incorrecta</string>
    <string name="finjuego1_noAciertos">No has acertado ninguna pregunta</string>
    <string name="finJuego1_respuestaCorrecta">Has acertado una pregunta!!!</string>
    <string name="finJuego1_respuestasCorrectas1">Has acertado</string>
    <string name="finJuego1_respuestasCorrectas2">preguntas!!</string>
    <string name="toast_noPreguntas">Se han acabado las preguntas!!</string>
    <string name="salir_juego_title">¡Atención!</string>
    <string name="salir_juego_text">¿Realmente quieres abandonar la partida?</string>
    <string name="salir_juego_cancelar">Cancelar</string>
    <string name="salir_juego_aceptar">Abandonar</string>
    <string name="opcion_Deporte">DEPORTE</string>
    <string name="opcion_Arte">ARTE</string>
    <string name="opcion_Geografia">GEOGRAFIA</string>
    <string name="opcion_Historia">HISTORIA</string>
    <string name="opcion_Ciencia">CIENCIA</string>
    <string name="opcion_Entretenimiento">ENTRETENIMIENTO</string>
    <string name="ajustes_resetear">Por defecto</string>
    <string name="alert_btnCancelar">Cancelar</string>
    <string name="alert_btnGuardar">Guardar</string>
    <string name="ajustes_Title">Categorias de las preguntas</string>
    <string name="ajustes_Aviso">¡Atención! No se guardarán las estadisticas de las partidas personalizadas</string>
    <string name="ajustes_NoSeleccion">No se ha seleccionado ninguna pregunta. No se guardarán los ajustes</string>
    <string name="ajustes_guardados">Se han guardado los ajustes!!</string>
    <string name="mensaje_noSalas">Aun no hay ninguna sala creada!</string>
    <string name="salas_title">SALAS</string>
    <string name="salas_noPreguntas">Error al obtener las preguntas. No se creará la sala</string>
    <string name="salas_alertTitle">Error al crear la sala</string>
    <string name="duelo_waitOponent">Esperando al oponente...</string>
    <string name="salas_crearSala">CREAR SALA</string>
    <string name="duelo_turnoDe">Turno de</string>
    <string name="duelo_miturno">Es tu turno</string>
    <string name="duelo_victoriaTitle">Victoria!!</string>
    <string name="duelo_derrotaTitle">Derrota!!</string>
    <string name="duelo_abandonoYo">Has abandonado la partida</string>
    <string name="duelo_abandonaEl1">El jugador</string>
    <string name="duelo_abandonaEl2">ha abandonado la partida</string>
    <string name="duelo_derrota1">El jugador</string>
    <string name="duelo_derrota2">te ha ganado</string>
    <string name="duelo_victoria">Has ganado al jugador</string>
    <string name="textCancelarEditarPerfil">¿Quieres cancelar la edición del perfil?</string>
    <string name="textSi">Sí</string>
    <string name="textNo">No</string>
    <string name="textCerrarSesion">¿Seguro que quieres cerrar la sesión?</string>
    <string name="duelo_empateTitle">Empate!!</string>
    <string name="duelo_empateText">Has empatado con</string>
    <string name="menuJuego_Contrareloj">Contrarreloj</string>
    <string name="menuJuego_Duelo">Duelo</string>
    <string name="menuJuego_Ajustes">Ajustes del juego</string>
    <string name="menuJuego_Carrera">Carrera</string>
    <string name="menuPerfil_Editar">EDITAR PERFIL</string>
    <string name="menuPerfil_CerrarSesion">CERRAR SESION</string>
    <string name="menuPerfil_preguntas1">Has respondido</string>
    <string name="menuPerfil_preguntas2">preguntas correctamente</string>
    <string name="menuPerfil_noJuego">Aún no has jugado ninguna partida</string>
    <string name="menuPerfil_noDuelo">No has jugado ningún duelo</string>
    <string name="menuPerfil_duelo1">Has ganado</string>
    <string name="menuPerfil_duelo2">duelos</string>
    <string name="menuPerfil_1duelo">duelo</string>
    <string name="menuPerfil_1pregunta">pregunta correctamente</string>
    <string name="menuPerfil_cerradaSesion">Se ha cerrado la sesión</string>
    <string name="menuPerfil_noGanaDuelo">No has ganado ningún duelo</string>
    <string name="menuPerfil_noAcPregunta">No has acertado ninguna pregunta</string>
    <string name="editPerfil_guardar">GUARDAR</string>
    <string name="editPerfil_cambiarFoto">Cambiar foto del perfil</string>
    <string name="editPerfil_errorTitle">Error al guardar</string>
    <string name="noConexion_text">No se ha podido conectar con la base de datos. Es necesaria la conexión a internet para poder jugar a Preguntados</string>
    <string name="editPerfil_guardadoOk">Se han guardado los datos correctamente</string>
    <string name="editPerfil_continuar">Continuar</string>
    <string name="obtenerPreguntas_errorTitle">Error al obtener las preguntas</string>
    <string name="obtenerPreguntas_errorText">No se ha podido conectar con la base de datos</string>
    <string name="btnJugar">JUGAR</string>
    <string name="btnRankingChange">Cambiar modo</string>
    <string name="textRanking1">CARRERA</string>
    <string name="textRanking2">CONTRARRELOJ</string>
    <string name="btnClose">Cerrar</string>
</resources>