<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".Activitys.MainMenuActivity">
    <TextView
        android:id="@+id/logoView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alfa_slab_one"
        android:text="@string/appTitle"
        android:textSize="36sp"/>
    <Button
        android:id="@+id/btnJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/boton_redondeado_gris"
        android:text="@string/btnJugar" />

    <Button
        android:id="@+id/btnRanking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/boton_redondeado_gris"
        android:text="@string/btnRanking" />

    <Button
        android:id="@+id/btnPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="50dp"
        android:text="@string/btnPerfil"
        android:background="@drawable/boton_redondeado_gris"/>

</LinearLayout>