<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/borde_salirjuego"
    android:orientation="vertical"
    tools:context=".Dialogs.DialogoSalirJuegoFragment">

    <TextView
        android:id="@+id/atencionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/salir_juego_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/salir_juego_text"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelarSalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:backgroundTint="#FA1D4F"
            android:text="@string/salir_juego_cancelar" />

        <Button
            android:id="@+id/buttonAbandonar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="35dp"
            android:backgroundTint="#51AF58"
            android:layout_weight="1"
            android:text="@string/salir_juego_aceptar" />
    </LinearLayout>
</LinearLayout>