<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RegistroActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="651dp"
        android:layout_marginTop="84dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/register_EmailText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/texto_input"
            android:drawableLeft="@drawable/icono_email"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/register_CorreoText"
            android:inputType="textEmailAddress"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/register_NombreText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/texto_input"
            android:drawableLeft="@drawable/icono_nombre"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/register_NombreText"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/register_UsuarioText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/texto_input"
            android:drawableLeft="@drawable/icono_usuario"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/register_userText"
            android:inputType="textPersonName"
            android:paddingLeft="10dp" />

        <EditText
            android:id="@+id/register_PasswordText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/texto_input"
            android:drawableLeft="@drawable/icono_clave"
            android:drawablePadding="5dp"
            android:ems="10"
            android:hint="@string/register_passwordText"
            android:inputType="textPassword"
            android:paddingLeft="10dp" />

        <Button
            android:id="@+id/buttonRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/boton_redondeado"
            android:text="@string/register_registerButton" />

        <TextView
            android:id="@+id/register_LoginText"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/register_loginText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
            app:layout_constraintVertical_bias="0.069" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>