<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.RoomActivity">

    <TextView
        android:id="@+id/textViewNoSalas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/mensaje_noSalas"
        android:textSize="16sp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/roomToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <ListView
        android:id="@+id/listRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonCrearSala"
        android:layout_below="@+id/roomToolbar"
        android:layout_marginTop="-1dp"
        android:layout_marginBottom="4dp"
        android:paddingBottom="10dp">

    </ListView>

    <Button
        android:id="@+id/buttonCrearSala"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/boton_redondeado_gris"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/salas_crearSala" />

    <TextView
        android:id="@+id/roomsTitle"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/salas_title"
        android:textSize="24sp" />
</RelativeLayout>